...
    <string name="login_server">%1$s\n%2$s</string>
    <string name="login_form_title">账户信息</string>
    <string name="username">用户名</string>
    <string name="username_hint">输入用户名</string>
    <string name="password">密码</string>
    <string name="password_hint">输入密码</string>
    <string name="login">登录</string>
    <string name="logging_in">登录中…</string>
    <string name="change_server">更换服务器</string>

    <string name="logout">退出登录</string>
    <string name="logout_confirmation_title">退出登录？</string>
    <string name="logout_confirmation_message">退出服务器“%1$s”的账户“%2$s”，清除本机登录状态</string>
    <string name="exit_app">退出</string>
    <string name="exit_confirmation_title">确认退出？</string>
...
